<resources>
    <string name="app_name">Level 1</string>
    <string name="incorrect_input">Incorrect input</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="google">google</string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="fill_out_the_profile">Fill out the profile and go to the application!</string>
    <string name="let_s_get_acquainted">Let\'s get acquainted</string>
    <string name="register">register</string>
    <string name="or">or</string>
    <string name="settings">Settings</string>
    <string name="name">name</string>
    <string name="career">Career</string>
    <string name="home_address">Home address</string>
    <string name="text_agree_to_our_terms_of_use">By clicking Register you agree to our Termsand Conditions</string>
    <string name="go_to_settings">Go to settings and fill out the profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="view_my_contacts">VIEW my contacts</string>
</resources>