<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/blue"
                                                   android:padding="16dp">

    <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/let_s_get_acquainted"
            android:textColor="@color/white_"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/fill_out_the_profile"
            android:textColor="@color/white_"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/email_input_layout"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:textColorHint="@color/gray"
            app:errorEnabled="true"
            app:expandedHintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/password_input_layout">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input_edit_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/gray"
            app:boxStrokeColor="@color/gray"
            app:errorEnabled="true"
            app:expandedHintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/checkbox_remember_me">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input_edit_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_remember_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="More Fonts..."
            android:text="@string/remember_me"
            android:textColor="@color/gray"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/gline"
            tools:layout_editor_absoluteX="16dp"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_google_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_style_white"
            android:text="@string/google"
            app:layout_constraintBottom_toTopOf="@+id/sign_up_or_text"/>

    <TextView
            android:id="@+id/sign_up_or_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@color/white_"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/button_register"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_style_transparent_with_orange_line"
            android:text="@string/register"
            android:textColor="@color/white_"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            tools:layout_editor_absoluteX="9dp"/>

    <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/text_agree_to_our_terms_of_use"
            android:textColor="@color/white_"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/sign_in1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/sign_in1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white_"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/sign_in2"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/sign_in2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/sign_in"
            android:textColor="@color/white_"
            app:layout_constraintBottom_toBottomOf="@+id/sign_in1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/sign_in1"/>
</androidx.constraintlayout.widget.ConstraintLayout>
