<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProfileActivity">

    <View
            android:id="@+id/viewTop"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/blue"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/AverageIndent"
            android:layout_marginTop="@dimen/AverageIndent"
            android:text="@string/settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/WhiteBigSize.Bolt"/>

    <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/photo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/percon_icon"
            app:layout_constraintBottom_toTopOf="@+id/name"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.165"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bar"/>

    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/name"
            app:layout_constraintBottom_toTopOf="@id/career"
            app:layout_constraintEnd_toEndOf="@+id/photo"
            app:layout_constraintStart_toStartOf="@+id/photo"
            app:layout_constraintTop_toBottomOf="@id/photo"
            style="@style/WhiteAboveAverageSize.Bolt"/>

    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/career"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/career"
            android:textColor="@color/white"
            android:textSize="@dimen/AverageSize"
            app:layout_constraintBottom_toTopOf="@id/homeAddress"
            app:layout_constraintEnd_toEndOf="@+id/name"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@id/name"/>

    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/homeAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/home_address"
            android:textColor="@color/white"
            android:textSize="@dimen/AverageSize"
            app:layout_constraintBottom_toBottomOf="@id/viewTop"
            app:layout_constraintEnd_toEndOf="@+id/career"
            app:layout_constraintStart_toStartOf="@+id/career"
            app:layout_constraintTop_toBottomOf="@id/career"/>

    <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/facebookIcon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/facebook"
            app:layout_constraintBottom_toBottomOf="@id/guideLine"
            app:layout_constraintEnd_toStartOf="@+id/linkedinIcon"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewTop"/>

    <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/linkedinIcon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/linkedin"
            app:layout_constraintEnd_toStartOf="@id/vkIcon"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintStart_toEndOf="@id/facebookIcon"
            app:layout_constraintTop_toTopOf="@id/facebookIcon"/>

    <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/vkIcon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/vk"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintStart_toEndOf="@id/linkedinIcon"
            app:layout_constraintTop_toTopOf="@id/linkedinIcon"/>

    <TextView
            android:id="@+id/goSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_settings"
            app:layout_constraintBottom_toTopOf="@id/editProfileButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideLine"
            app:layout_constraintVertical_chainStyle="spread_inside"
            style="@style/BlueAverageSize"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/editProfileButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/AverageIndent"
            android:layout_marginEnd="@dimen/AverageIndent"
            android:background="@drawable/button_style_transparent_with_stroke"
            android:text="@string/edit_profile"
            style="@style/BlueAverageSize"
            app:layout_constraintBottom_toTopOf="@id/myContactsButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/goSettings"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/myContactsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/AverageIndent"
            android:layout_marginEnd="@dimen/AverageIndent"
            android:layout_marginBottom="@dimen/AverageIndent"
            android:background="@drawable/button_style_orange"
            style="@style/WhiteAverageSize"
            android:text="@string/view_my_contacts"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editProfileButton"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.77"/>

</androidx.constraintlayout.widget.ConstraintLayout>